# TTSKit-multi-engine-tts

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README-en.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  setup_system.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: generate_changelog.py  generate_readme.py
data/: .gitignore
docs/: ADVANCED_FEATURES.md  API_KEY_PRIORITY.md  SECURITY.md  api.md  architecture.md  piper_setup.md
examples/: 01_basic.py  02_fastapi.py  03_batch.py  admin_bot_example.py  api_example.py  api_key_priority_example.py  api_keys_example.py  audio_manager_example.py  benchmark.py  edge_synth_to_file.py  performance_example.py  piper_example.py  standalone_edge.py  standalone_gtts.py  standalone_gtts_pure.py  synth_to_file.py  test_admin_api_temp.py  test_advanced_features.py  test_circular_import.py  test_database_api.py  test_telegram_database.py
tests/: README.md  __init__.py  conftest.py  test_adapters_aiogram.py  test_adapters_factory.py  test_adapters_factory_comprehensive.py  test_admin_api.py  test_admin_api_fixed.py  test_admin_commands.py  test_admin_commands_comprehensive.py  test_admin_commands_extended.py  test_admin_commands_handlers.py  test_admin_commands_simple.py  test_admin_panel.py  test_admin_panel_comprehensive.py  test_admin_panel_extended.py  test_admin_panel_setup_comprehensive.py  test_admin_router.py  test_advanced_metrics.py  test_aiogram_adapter_full.py  test_api_advanced.py  test_api_app.py  test_api_middleware_full.py  test_audio_correctness.py  test_audio_info_demo.py  test_audio_info_final.py  test_audio_info_simple.py  test_audio_manager.py  test_audio_manager_extras.py  test_audio_manager_get_audio_info.py  test_audio_out.py  test_audio_pipeline.py  test_audio_utils_comprehensive.py  test_bot_admin_keys_callbacks.py  test_bot_cache_system_callbacks.py  test_bot_callbacks.py  test_bot_callbacks_complete_coverage.py  test_bot_commands.py  test_cache_base.py  test_cache_init.py  (+66 more)
tests/data/: sample_text.txt
ttskit/: __init__.py  config.py  exceptions.py  health.py  metrics.py  public.py  version.py
ttskit/adapters/: __init__.py  factory.py
ttskit/api/: __init__.py  app.py  dependencies.py  middleware.py
ttskit/api/routers/: __init__.py  admin.py  engines.py  synthesis.py  system.py
ttskit/audio/: __init__.py  pipeline.py
ttskit/bot/: __init__.py  callbacks.py  commands.py  unified_bot.py
ttskit/cache/: __init__.py  base.py  memory.py  redis.py
ttskit/database/: __init__.py  base.py  connection.py  init_db.py  migration.py  models.py
ttskit/engines/: __init__.py  base.py  edge_engine.py  factory.py  gtts_engine.py  piper_engine.py  registry.py  smart_router.py
ttskit/metrics/: __init__.py  advanced.py
ttskit/services/: __init__.py  user_service.py
ttskit/telegram/: __init__.py  aiogram_adapter.py  base.py  factory.py  pyrogram_adapter.py  telebot_adapter.py  telethon_adapter.py
ttskit/utils/: __init__.py  audio.py  audio_manager.py  i18n.py  logging_config.py  parsing.py  performance.py  rate_limiter.py  temp_manager.py  text.py  validate.py
ttskit_cli/: __init__.py  main.py  voices_helper.py
